--- a/electron/package.json
+++ b/electron/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Restvo",
-  "version": "1.8.4",
-  "description": "Learn and Grow",
+  "version": "1.9.0",
+  "description": "A Learning Platform",
   "private": true,
   "main": "./build/index.js",
   "scripts": {
