--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
-    "capacitor-jitsi-meet": "^2.1.2-beta.2",
+    "capacitor-jitsi-meet": "git+ssh://git@github.com/calvinckho/capacitor-jitsi-meet-premium.git#pip-dev",
     "capacitor-share-extension": "0.0.20",
     "compact-timezone-list": "^1.0.6",
     "compressorjs": "^1.0.7",
