--- a/package.json
+++ b/package.json
@@ -56,12 +56,12 @@
     "@ionic/angular": "^5.9.3",
     "@ionic/pwa-elements": "^1.5.2",
     "@ionic/storage": "2.2.0",
-    "@stripe/stripe-js": "^1.24.0",
+    "@stripe/stripe-js": "^1.27.0",
     "@swimlane/ngx-charts": "^19.2.0",
     "@types/hammerjs": "^2.0.41",
     "@types/scriptjs": "0.0.2",
     "ajv": "^6.12.6",
-    "angular-cd-timer": "^1.1.0",
+    "angular-cd-timer": "^1.3.0",
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
@@ -69,7 +69,7 @@
     "capacitor-share-extension": "0.0.20",
     "compact-timezone-list": "^1.0.6",
     "compressorjs": "^1.0.7",
-    "cordova-plugin-app-version": "^0.1.12",
+    "cordova-plugin-app-version": "^0.1.14",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-calendar": "^5.1.6",
     "cordova-plugin-contacts": "^3.0.1",
@@ -88,7 +88,7 @@
     "ionic-cache": "^4.1.0",
     "ionicons": "^5.5.4",
     "jetifier": "^1.6.6",
-    "minimist": "^1.2.5",
+    "minimist": "^1.2.6",
     "ngx-electron": "^2.2.0",
     "ngx-pinch-zoom": "^2.5.5",
     "ngx-plyr": "^4.0.0",
@@ -106,8 +106,8 @@
     "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1202.16",
-    "@angular-devkit/build-angular": "^12.2.16",
+    "@angular-devkit/architect": "^0.1202.17",
+    "@angular-devkit/build-angular": "^12.2.17",
     "@angular-devkit/core": "12.2.12",
     "@angular-devkit/schematics": "12.2.12",
     "@angular/cli": "12.2.12",
@@ -120,7 +120,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/jquery": "^3.5.14",
-    "@types/node": "^12.20.47",
+    "@types/node": "^12.20.48",
     "acorn": "^6.4.2",
     "codelyzer": "^6.0.0",
     "electron": "^9.4.3",
@@ -129,10 +129,10 @@
     "ionic-mocks": "^1.3.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.3.17",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "^6.3.19",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "^4.0.2",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
