--- a/ios/App/ShareExtension/Info.plist
+++ b/ios/App/ShareExtension/Info.plist
@@ -25,23 +25,12 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>NSExtensionActivationRule</key>
-                <string>SUBQUERY (
-                      extensionItems,
-                      $extensionItem,
-                      SUBQUERY (
-                          $extensionItem.attachments,
-                          $attachment,
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.url" ||
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.plain-text" ||
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.image" ||
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.data" ||
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.content" ||
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "com.adobe.pdf" ||
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.png" ||
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "com.compuserve.gif"
-                        ).@count == $extensionItem.attachments.@count
-                        ).@count == 1
-                </string>
+			<dict>
+				<key>NSExtensionActivationSupportsText</key>
+				<true/>
+				<key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
+				<integer>1</integer>
+			</dict>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
 		<string>MainInterface</string>
