--- a/ios/App/MediaShareExtension/MediaShareExtension.entitlements
+++ b/ios/App/MediaShareExtension/MediaShareExtension.entitlements
@@ -4,11 +4,15 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.restvo.test</string>
+	</array>
 	<key>com.apple.security.network.client</key>
 	<true/>
 	<key>keychain-access-groups</key>
-    <array>
-        <string>$(AppIdentifierPrefix)com.restvo.test</string>
-    </array>
+	<array>
+		<string>$(AppIdentifierPrefix)com.restvo.test</string>
+	</array>
 </dict>
 </plist>
