--- a/ios/App/MediaShareExtension/Info.plist
+++ b/ios/App/MediaShareExtension/Info.plist
@@ -13,11 +13,10 @@
                       SUBQUERY (
                           $extensionItem.attachments,
                           $attachment,
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.url" ||
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.plain-text" ||
                            ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.image" ||
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.data" ||
-                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.content" ||
+                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.spreadsheet" ||
+                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.presentation" ||
+                           ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "org.openxmlformats.wordprocessingml.document" ||
                            ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "com.adobe.pdf" ||
                            ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.png" ||
                            ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "com.compuserve.gif"
