--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/pwa": "^0.900.7",
     "@angular/router": "~8.2.14",
     "@angular/service-worker": "~8.2.14",
+    "@calvinckho/mic-recorder-to-mp3": "^2.2.4-beta.0",
     "@capacitor-community/electron": "^1.3.3",
     "@capacitor/android": "^2.4.6",
     "@capacitor/core": "^2.4.6",
@@ -56,7 +57,7 @@
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
     "capacitor-jitsi-meet": "^1.5.13",
-    "capacitor-share-extension": "0.0.18",
+    "capacitor-share-extension": "git+ssh://git@github.com/calvinckho/capacitor-share-extension.git#capacitor-2",
     "compact-timezone-list": "^1.0.6",
     "compressorjs": "^1.0.7",
     "cordova-plugin-app-version": "^0.1.12",
